<resources>
    <string name="app_name">Volume</string>
    <string name="beltoon">Beltoon</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="volume">Volume van inkomende oproepen gebruiken voor meldingen</string>
    <string name="melding">Melding</string>
    <string name="ok">Ok</string>
    <string name="reset">Reset</string>
    <string name="action_settings">Settings</string>
    <string name="stil">stille modus</string>
    <string name="trillen">trillen</string>
    <string name="vol">Volume</string>
</resources>
